--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Test Shit</h1>
+    <h2>Filler text</h2>
 </body>
 </html>
