Avance 1 branch avance Commit #3

--- a/index.html
+++ b/index.html
@@ -9,39 +9,34 @@
     <link rel="stylesheet" href="css/flag.min.css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <a class="navItem HomeIcn"><i class="fas fa-home"></i></a>
-            <a class="navItem"><li class="navList">Contáctenos</li></a>
-            <a class="navItem"><li class="navList">Ingresar sesión</li></a>
-            <a class="navItem"><li class="navList">Horarios</li></a>
-            <a class="navItem"><li class="navList">Sobre nosotros</li></a>
-            <!--<a class="navItem">
-        <li class="dropdown navList">
-            <button class="dropbtn">Regiones Afiliadas</button>
-            <!--<br/><br/>
-            <div class="dropdown-content">
-                <br />
-                <!--<a href="#">América  <i class="fas fa-caret-right"></i></a>
-                <a id="A" href="#">América    .<i id="AmOpt" class="fas fa-caret-right"></i></a>
-                <a href="#">Asia <i class="fas fa-caret-right"></i></a>
-                <a href="#">Europa <i class="fas fa-caret-right"></i></a>
-                <a href="#">África <i class="fas fa-caret-right"></i></a>
-                <a href="#">Oceanía <i class="fas fa-caret-right"></i></a>
-            </div>
-            <div class="subdropdown">
-                <a href="#">Costa Rica</a>
-            </div>
-        </li>
-    </a>-->
-
-        </ul>
-    </nav>
-    <div id="bannerDiv">
-        <!--<img id="ImgBanner" src="../img/train_banner_image.jpg" width="100%" />-->
-        <!--<img id="ImgBanner" src="https://wallpapercave.com/wp/FPfe3Eu.jpg" width="99.99%"/>-->
+    <div id="DivBannerMain">
+        <nav>
+            <ul>
+                <a class="navItem HomeIcn"><i class="fas fa-home"></i></a>
+                <a class="navItem"><li class="navList">Contáctenos</li></a>
+                <a class="navItem"><li class="navList">Ingresar sesión</li></a>
+                <a class="navItem"><li class="navList">Horarios</li></a>
+                <a class="navItem"><li class="navList">Sobre nosotros</li></a>
+            </ul>
+        </nav>
+        <h1>Go unrestricted<br/>
+            Travel free<br />
+            Enjoy for less.</h1>
+        <br />
+        <button>
+            Show more
+            <i class="fas fa-caret-right"></i>
+        </button>
     </div>
-    <!--<div id="DivPaises">
+    
+    <!--<div id="bannerDiv">
+        <img id="ImgBanner" src="../img/train_banner_image.jpg" width="100%" />
+        <img id="ImgBanner" src="https://wallpapercave.com/wp/FPfe3Eu.jpg" width="99.99%"/>
+    </div> 
+        
+        comment ended here
+
+    <div id="DivPaises">
         <br />
         <h1>Asia</h1>
         <i class="ae flag"></i>
@@ -62,7 +57,8 @@
         <i class="new zealand flag"></i>
         <h2 class="CountryHeader">Nueva Zelanda</h2>
     </div>-->
-    <div id="DivRutas">
+
+    <!--<div id="DivRutas">
         <h1>Ruta América</h1>
         <hr />
         <section id="RtAmrca">
@@ -427,7 +423,7 @@
         <table></table>
         <br />
     </div>
-    <br />
+    <br />-->
     <script src="https://kit.fontawesome.com/03593bd05b.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
