--- a/index.html
+++ b/index.html
@@ -19,21 +19,80 @@
                 <a class="navItem"><li class="navList">Sobre nosotros</li></a>
             </ul>
         </nav>
-        <h1>Go unrestricted<br/>
+        <h1>
+            Go unrestricted<br />
             Travel free<br />
-            Enjoy for less.</h1>
+            Enjoy for less.
+        </h1>
         <br />
-        <button>
-            Show more
-            <i class="fas fa-caret-right"></i>
-        </button>
+        <a href="#InfoDiv">
+            <button>
+                Show more
+                <i class="fas fa-caret-right"></i>
+            </button>
+        </a>
     </div>
-    
+    <br />
+    <div id="InfoDiv">
+        <h1>Países afiliados</h1>
+        <hr class="headerHR" />
+        <h2>Tenemos países y rutas afiliadas a nuestro servicio en todo el mundo y todos los continentes, entre ellas:</h2>
+        <h2>
+            -América<br />
+            <br />
+            -África<br />
+            <br />
+            -Asia<br />
+            <br />
+            -Europa<br />
+            <br />
+            -Oceanía<br />
+        </h2>
+        <hr />
+        <br />
+        <h1>Promesa laboral</h1>
+        <hr class="headerHR" />
+        <h2>Nos comprometemos a la satisfacción del cliente en la totalidad de su viaje, acomodando cualquier necesidad que sea necesaria.</h2>
+    </div>
+    <div id="SecDiv">
+        <h1>¿Adónde vámos?</h1>
+        <hr class="headerHR" />
+        <h2>Por nuestro enorme servicio y su gran cobertura, los clientes pueden encontrar los servicios en cualquier continente en los países declarados <a href="#">aquí</a>.</h2>
+    </div>
+    <br />
+    <br />
+    <div id="TercDiv">
+        <h1>Instituciones Asociadas</h1>
+        <hr class="headerHR" />
+        <h2>
+            -Europa
+            <hr class="AssocHR" />
+            <img src="img/ectaa_icon.jpg" />
+            <span class="tooltip"></span>
+            <img src="img/tucan_icon.png" />
+            <img src="img/euroventure_icon.jpg" />
+        </h2>
+        <hr class="headerHR" />
+        <h2>
+            -América
+            <hr class="AssocHR" />
+            <img src="img/gwa_icon.jpg" />
+            <img src="img/dtcrc_icon.jpg" />
+            <img src="img/wldexp_icon.png" />
+
+        </h2>
+        <br />
+    </div>
+    <!--<div id="footer" class="BA">
+        <h1></h1>
+
+    </div>-->
+
     <!--<div id="bannerDiv">
         <img id="ImgBanner" src="../img/train_banner_image.jpg" width="100%" />
         <img id="ImgBanner" src="https://wallpapercave.com/wp/FPfe3Eu.jpg" width="99.99%"/>
-    </div> 
-        
+    </div>
+
         comment ended here
 
     <div id="DivPaises">
@@ -57,7 +116,6 @@
         <i class="new zealand flag"></i>
         <h2 class="CountryHeader">Nueva Zelanda</h2>
     </div>-->
-
     <!--<div id="DivRutas">
         <h1>Ruta América</h1>
         <hr />
