--- a/index.html
+++ b/index.html
@@ -33,56 +33,87 @@
         </a>
     </div>
     <br />
-    <div id="InfoDiv">
-        <h1>Países afiliados</h1>
-        <hr class="headerHR" />
-        <h2>Tenemos países y rutas afiliadas a nuestro servicio en todo el mundo y todos los continentes, entre ellas:</h2>
-        <h2>
-            -América<br />
+    <div class="container">
+        <div id="InfoDiv">
+            <h1>Países afiliados</h1>
+            <hr class="headerHR" />
+            <h2>Tenemos países y rutas afiliadas a nuestro servicio en todo el mundo y todos los continentes, entre ellas:</h2>
+            <h2>
+                -América<br />
+                <br />
+                -África<br />
+                <br />
+                -Asia<br />
+                <br />
+                -Europa<br />
+                <br />
+                -Oceanía<br />
+            </h2>
+            <hr />
             <br />
-            -África<br />
-            <br />
-            -Asia<br />
-            <br />
-            -Europa<br />
-            <br />
-            -Oceanía<br />
-        </h2>
-        <hr />
+            <h1>Promesa laboral</h1>
+            <hr class="headerHR" />
+            <h2>Nos comprometemos a la satisfacción del cliente en la totalidad de su viaje, acomodando cualquier necesidad que sea necesaria.</h2>
+        </div>
+        <div id="SecDiv">
+            <h1>¿Adónde vámos?</h1>
+            <hr class="headerHR" />
+            <h2>Por nuestro enorme servicio y su gran cobertura, los clientes pueden encontrar los servicios en cualquier continente en los países declarados <a href="#">aquí</a>.</h2>
+        </div>
         <br />
-        <h1>Promesa laboral</h1>
-        <hr class="headerHR" />
-        <h2>Nos comprometemos a la satisfacción del cliente en la totalidad de su viaje, acomodando cualquier necesidad que sea necesaria.</h2>
-    </div>
-    <div id="SecDiv">
-        <h1>¿Adónde vámos?</h1>
-        <hr class="headerHR" />
-        <h2>Por nuestro enorme servicio y su gran cobertura, los clientes pueden encontrar los servicios en cualquier continente en los países declarados <a href="#">aquí</a>.</h2>
-    </div>
-    <br />
-    <br />
-    <div id="TercDiv">
-        <h1>Instituciones Asociadas</h1>
-        <hr class="headerHR" />
-        <h2>
-            -Europa
-            <hr class="AssocHR" />
-            <img src="img/ectaa_icon.jpg" />
-            <span class="tooltip"></span>
-            <img src="img/tucan_icon.png" />
-            <img src="img/euroventure_icon.jpg" />
-        </h2>
-        <hr class="headerHR" />
-        <h2>
-            -América
-            <hr class="AssocHR" />
-            <img src="img/gwa_icon.jpg" />
-            <img src="img/dtcrc_icon.jpg" />
-            <img src="img/wldexp_icon.png" />
+        <br />
+        <div id="TercDiv">
+            <h1>Instituciones Asociadas</h1>
+            <hr class="headerHR" />
+            <h2>
+                -Europa
+                <hr class="AssocHR" />
+                <img src="img/ectaa_icon.jpg" />
+                <span class="tooltip"></span>
+                <img src="img/tucan_icon.png" />
+                <img src="img/euroventure_icon.jpg" />
+            </h2>
+            <hr class="headerHR" />
+            <h2>
+                -América
+                <hr class="AssocHR" />
+                <img src="img/gwa_icon.jpg" />
+                <img src="img/dtcrc_icon.jpg" />
+                <img src="img/wldexp_icon.png" />
 
-        </h2>
-        <br />
+            </h2>
+            <hr class="headerHR" />
+            <h2>
+                -Asia
+                <hr class="AssocHR" />
+                <img src="img/gwa_icon.jpg" />
+                <img src="img/dtcrc_icon.jpg" />
+                <img src="img/wldexp_icon.png" />
+
+            </h2>
+            <hr class="headerHR" />
+            <h2>
+                -África
+                <hr class="AssocHR" />
+                <img src="img/gwa_icon.jpg" />
+                <img src="img/dtcrc_icon.jpg" />
+                <img src="img/wldexp_icon.png" />
+
+            </h2>
+            <hr class="headerHR" />
+            <h2>
+                -Oceanía
+                <hr class="AssocHR" />
+                <img src="img/gwa_icon.jpg" />
+                <img src="img/dtcrc_icon.jpg" />
+                <img src="img/wldexp_icon.png" />
+
+            </h2>
+            <br />
+        </div>
+
     </div>
+    
     <!--<div id="footer" class="BA">
         <h1></h1>
 
