--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <br />
     <div class="container">
-        <div id="InfoDiv">
+        <div id="InfoDiv" class="InfoContentDiv">
             <h1>Países afiliados</h1>
             <hr class="headerHR" />
             <h2>Tenemos países y rutas afiliadas a nuestro servicio en todo el mundo y todos los continentes, entre ellas:</h2>
@@ -55,21 +55,20 @@
             <hr class="headerHR" />
             <h2>Nos comprometemos a la satisfacción del cliente en la totalidad de su viaje, acomodando cualquier necesidad que sea necesaria.</h2>
         </div>
-        <div id="SecDiv">
+        <div id="SecDiv" class="InfoContentDiv">
             <h1>¿Adónde vámos?</h1>
             <hr class="headerHR" />
             <h2>Por nuestro enorme servicio y su gran cobertura, los clientes pueden encontrar los servicios en cualquier continente en los países declarados <a href="#">aquí</a>.</h2>
         </div>
         <br />
         <br />
-        <div id="TercDiv">
+        <div id="TercDiv" class="InfoContentDiv">
             <h1>Instituciones Asociadas</h1>
             <hr class="headerHR" />
             <h2>
                 -Europa
                 <hr class="AssocHR" />
                 <img src="img/ectaa_icon.jpg" />
-                <span class="tooltip"></span>
                 <img src="img/tucan_icon.png" />
                 <img src="img/euroventure_icon.jpg" />
             </h2>
